Fix bug with overlaping rows.

--- a/src/components/Footer.module.scss
+++ b/src/components/Footer.module.scss
@@ -6,7 +6,7 @@
 	flex-flow: row nowrap;
 	height: index.$input-height + index.$row-padding + index.$row-padding;
 	background: index.$color-gray;
-	z-index: 1;
+	z-index: 2;
 }
 .editor
 {
