--- a/src/components/List.module.scss
+++ b/src/components/List.module.scss
@@ -11,5 +11,5 @@ $scroll-height: 17px;
 	overflow-x: scroll;
 	box-sizing: border-box;
 	border-bottom: solid 1px index.$color-gray-light;
-	z-index: 0;
+	z-index: 1;
 }
