--- a/src/components/Main.module.scss
+++ b/src/components/Main.module.scss
@@ -4,6 +4,7 @@
 {
 	display: flex;
 	flex-flow: row nowrap;
+	z-index: 1;
 }
 .separator
 {
